--- a/_data/global.yml
+++ b/_data/global.yml
@@ -1,13 +1,13 @@
 # Site Settings
-title: "Hello. I'm Jami Gibbs."
-description: "I'm a software developer and designer from Chicago creating useful things for the web."
+title: "Hello. I'm Eric Guo."
+description: "I'm a software developer and a start-up owner from Beijing. I love coding, photographing, instrument playing, among others, I shape my life as an Art masterpiece."
 url: 'http://127.0.0.1:4000' # the base hostname & protocol for your site
 nav: "true"
-footer_text: '© 2016 Jami Gibbs'
-twitter: 'jamigibbs'
-github: 'jamigibbs'
-medium: 'blog.jamigibbs.com'
+footer_text: '© 2016 Eric Guo'
+twitter: 'kwakhyok'
+github: 'yguo'
+medium: 'www.arvix.cn'
 
 # Admin Settings
-admin_name: 'Jami Gibbs'
-admin_email: 'jami0821@gmail.com'
+admin_name: 'Eric Guo'
+admin_email: 'guoyi1023@gmail.com'
