--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,3 +1,5 @@
 main:
     - { url: '/', text: 'Home' }
     - { url: '/about', text: 'About' }
+    - { url: '/blog', text: 'blog' }
+    - { url: '/zh', text: '中文' }
