highlight programming code

--- a/_config.yml
+++ b/_config.yml
@@ -23,11 +23,11 @@ unpublished: false
 
 # Plugins
 whitelist: []
-gems:      [jekyll-paginate]
+gems:      [jekyll-paginate, pygments.rb]
 
 # Conversion
 markdown:    kramdown
-highlighter: rouge
+highlighter: pygments
 lsi:         false
 excerpt_separator: "\n\n"
 # incremental: false
