--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -2,4 +2,5 @@ main:
     - { url: '/', text: 'Home' }
     - { url: '/about', text: 'About' }
     - { url: '/blog', text: 'blog' }
+    - { url: '/lessons', text: 'lessons' }
     - { url: '/zh', text: '中文' }
